v2_update_estrutura